Closed Bug 406798 Opened 17 years ago Closed 17 years ago

GetTextAtOffset(endOfTextOffset, BOUNDARY_LINE_START) returns first line on multi line paragraphs

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression)

Attachments

(1 file)

When asking for the line of text (using start of line offsets) from the null character at the end of the paragraph, we're returning the first line from the paragraph instead of the last.
To reproduce, load http://www.mozilla.org/access/qa/jstest, select line start and click on the last line of the paragraph "The quick brown fox jumped over the lazy dog". It should return "over the lazy dog" for the text.
Blocks: texta11y
Keywords: regression
Attachment #291452 - Flags: review?(surkov.alexander)
Attachment #291452 - Flags: review+
Attachment #291452 - Flags: approval1.9?
Attachment #291452 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: