Bug 406798. GetTextAtOffset(endOfTextOffset, BOUNDARY_LINE_START) returns first line on multi line paragraphs. r=ginn.chen, a=dsicore